--- a/SinFronteras/pom.xml
+++ b/SinFronteras/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.howtodoinjava.spring5</groupId>
+	<groupId>co.edu.sinfronteras</groupId>
 	<artifactId>SinFronteras</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
@@ -94,7 +94,7 @@
                 <dependency>
                     <groupId>mysql</groupId>
                     <artifactId>mysql-connector-java</artifactId>
-                    <version>5.1.32</version>
+                    <version>8.0.17</version>
                 </dependency>
 	</dependencies>
 
