--- a/SinFronteras/pom.xml
+++ b/SinFronteras/pom.xml
@@ -96,6 +96,14 @@
                     <artifactId>mysql-connector-java</artifactId>
                     <version>8.0.17</version>
                 </dependency>
+                
+                <!-- https://mvnrepository.com/artifact/org.webjars/jquery -->
+                <dependency>
+                    <groupId>org.webjars</groupId>
+                    <artifactId>jquery</artifactId>
+                    <version>3.3.1</version>
+                </dependency>
+
 	</dependencies>
 
 	<build>
