--- a/SinFronteras/pom.xml
+++ b/SinFronteras/pom.xml
@@ -103,7 +103,56 @@
                     <artifactId>jquery</artifactId>
                     <version>3.3.1</version>
                 </dependency>
-
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>org.eclipse.persistence.antlr</artifactId>
+	  <version>2.6.1-RC1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>org.eclipse.persistence.asm</artifactId>
+	  <version>2.6.1-RC1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>org.eclipse.persistence.core</artifactId>
+	  <version>2.6.1-RC1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>org.eclipse.persistence.dbws</artifactId>
+	  <version>2.6.1-RC1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>org.eclipse.persistence.jpa</artifactId>
+	  <version>2.6.1-RC1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>org.eclipse.persistence.jpa.jpql</artifactId>
+	  <version>2.6.1-RC1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
+	  <version>2.6.1-RC1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>org.eclipse.persistence.moxy</artifactId>
+	  <version>2.6.1-RC1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>org.eclipse.persistence</groupId>
+	  <artifactId>org.eclipse.persistence.oracle</artifactId>
+	  <version>2.6.1-RC1</version>
+	 </dependency>
+	 <dependency>
+	  <groupId>unknown.binary</groupId>
+	  <artifactId>javax.persistence</artifactId>
+	  <version>SNAPSHOT</version>
+	 </dependency>
 	</dependencies>
 
 	<build>
@@ -136,4 +185,11 @@
                 
 	</build>
     <name>SinFronteras</name>
+ <repositories>
+  <repository>
+   <id>unknown-jars-temp-repo</id>
+   <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
+   <url>file:${project.basedir}/lib</url>
+  </repository>
+ </repositories>
 </project>
