--- a/SinFronteras/pom.xml
+++ b/SinFronteras/pom.xml
@@ -31,6 +31,10 @@
 			<artifactId>spring-orm</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+                
+                <!-- Spring Security -->
+		
+                
 
 		<!-- Hibernate ORM -->
 		<dependency>
@@ -88,6 +92,13 @@
 			<version>${jsp.version}</version>
 			<scope>provided</scope>
 		</dependency>
+                
+                <!-- https://mvnrepository.com/artifact/jaxen/jaxen -->
+                    <dependency>
+                        <groupId>jaxen</groupId>
+                        <artifactId>jaxen</artifactId>
+                        <version>1.1.1</version>
+                    </dependency>
 
 		<!-- MySQL Dependency -->
 <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -164,6 +175,7 @@
 		</resources>
 		<plugins>
 			<plugin>
+                                <groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.5.1</version>
 				<configuration>
