--- a/SinFronteras/pom.xml
+++ b/SinFronteras/pom.xml
@@ -60,9 +60,24 @@
                         <artifactId>spring-security-crypto</artifactId>
                         <version>5.0.0.RELEASE</version>
                     </dependency>
+                    
+                    <dependency>
+                        <groupId>org.springframework.security</groupId>
+                        <artifactId>spring-security-openid</artifactId>
+                        <version>5.0.0.RELEASE</version>
+                    </dependency>
 
-                
-
+                    <dependency>
+                        <groupId>org.springframework.security</groupId>
+                        <artifactId>spring-security-ldap</artifactId>
+                        <version>5.0.0.RELEASE</version>
+                    </dependency>
+                    
+                    <dependency>
+                        <groupId>org.apache.httpcomponents</groupId>
+                        <artifactId>httpclient</artifactId>
+                        <version>4.5.1</version>
+                    </dependency>
 		<!-- Hibernate ORM -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
@@ -172,10 +187,10 @@
 	  <version>2.6.1-RC1</version>
 	 </dependency>
 	 <dependency>
-	  <groupId>org.eclipse.persistence</groupId>
-	  <artifactId>org.eclipse.persistence.jpa.modelgen.processor</artifactId>
-	  <version>2.6.1-RC1</version>
-	 </dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-jpamodelgen</artifactId>
+            <version>5.0.12.Final</version>
+          </dependency>
 	 <dependency>
 	  <groupId>org.eclipse.persistence</groupId>
 	  <artifactId>org.eclipse.persistence.moxy</artifactId>
